# pii_project

./: .gitignore  README.md  deploy.sh  docker-compose.yml
backend/: Dockerfile  database.py  main.py  models.py  pyproject.toml
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.js  App.scss  config.js  resultsContainer.jsx  resultscontainer.scss  searchContainer.jsx  searchcontainer.scss
frontend/src/services/: searchService.js
